--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ Flask==3.0.0
 Flask-SocketIO==5.3.6
 python-socketio==5.11.0
 python-engineio==4.9.0
-eventlet==0.35.2
+gevent==24.2.1
+gevent-websocket==0.10.1
 gunicorn==21.2.0
